Fixed some overflow errors causing weird behavior, every game tested seems to work so far

--- a/style.css
+++ b/style.css
@@ -1,11 +1,32 @@
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   padding: 10px;
   background-color: white;
+}
 
+button#reset {
+  margin-top: 100px;
+  margin-left: 30px;
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 200px;
+  height: 100px;
+  background-color: white;
+  cursor: pointer;
+}
+
+#screenContainer {
+  border: 0px solid black;
+  width: 100%;
+  margin: auto;
 }
 
 #screen {
-  border: 0px solid white;
+  border: 5px solid black;
   box-shadow: rgb(194, 194, 194) 10px 10px 10px;
+  margin: 0 auto;
+  display: block;
 }
